# barq

./: USER_GUIDE.md
barq-common/: Cargo.toml  create_strategy.sh
barq-common/src/: graph.rs  strategy.rs
barq-common/src/algorithms/: direct.rs  mod.rs
barq-common/src/algorithms/ldk_router/: logger.rs  mod.rs  network_graph_conversion.rs
barq-common/src/algorithms/probabilistic/: mod.rs
barq-plugin/: Cargo.toml
barq-plugin/src/: plugin.rs
barq-plugin/src/methods/: pay.rs
barq-plugin/src/methods/graph/: cln.rs
barq-plugin/src/methods/utils/: graph.rs
tests/: test_simple.py
