[package]
name = "barq-common"
version = "0.0.1"
edition = "2021"


[dependencies]
# General dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Dependencies to visualize the graph
petgraph = "0.6"


# Dependencies to use LDK routing strategy
lightning = "0.0.123"
bitcoin = "0.31.2"
secp256k1 = "0.27"
